// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot changes of components app snapshots 1`] = `<Main />`;

exports[`snapshot changes of components eduction snapshots 1`] = `
<div>
  <OneLinerHeader />
  <BasicDisplay
    list={
      Array [
        "<b>PGDITM</b>, SCDL, Symbiosis, Pune, India (2017)",
        "<b>BTech IT</b>, MDU Rohtak, Haryana, India (2007)",
      ]
    }
  />
</div>
`;

exports[`snapshot changes of components home snapshots 1`] = `
<div>
  <OneLinerHeader />
  <BasicDisplay
    list={
      Array [
        "I have 14+ years wide experience in software development industry.",
        "I work(ed) on primarily <b>React.Js, Js, Html, Python3, django3, SQL, Postgres, git</b> & secondarily <b>NodeJs, Tornado, PlSql, mysql, php7, Vue, Svelte</b>",
        "I am versatile & passionate developer with decent soft skills.",
        "I am lead developer over Expansion packs for finance reporting, working on python, django, postgres, React.JS and REST APIs",
        "I design secure api calls through HS256 JWT, Crypto Signer, CSRF, cookies, white-listing and short lived tokens",
        "I do Code . Collaborate . Build . Change . Incident . Release . Triage",
        "I help in recruiting, grow team and work on enabling new team mates",
        "I am a code reviewer,mentor and face to dev team",
        "I use JIRA & Leankit for agility, bug tracking and backlog grooming",
        "I know SDLC, Incident | Change | Release management",
      ]
    }
  />
  <HomeDemo />
</div>
`;
